--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -204,6 +204,7 @@
           <ng-container matColumnDef="amountBooking">
             <th mat-header-cell *matHeaderCellDef>Số tiền</th>
             <td mat-cell *matCellDef="let booking; let i = index">
+              <mat-form-field>
               <input
                 matInput
                 [(ngModel)]="booking.amountBooking"
@@ -213,12 +214,14 @@
                 (keyup)="booking.amountBooking = this.formatCurrency(booking.amountBooking)"
                 required
                 />
+              </mat-form-field>
             </td>
           </ng-container>
           <ng-container matColumnDef="txnDate">
             <th mat-header-cell *matHeaderCellDef>Ngày</th>
             <td mat-cell *matCellDef="let booking">
               <mat-form-field>
+                <mat-label>Số tiền</mat-label>
                 <input
                   matInput
                   opened="true"
