--- a/src/app/booking-manage/agency-booking/agency-booking.component.html
+++ b/src/app/booking-manage/agency-booking/agency-booking.component.html
@@ -175,15 +175,12 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
         <td mat-cell *matCellDef="let booking">
-          <a
-          href="#"
-          (click)="document.location.href=this.getUrlReturnBatchTransaction(booking.agencyId, booking.batchTxnName);"
 
-          >
-          <button mat-mini-fab color="primary">
+          <button mat-mini-fab color="primary"
+          [routerLink]="['/transaction/batch-transaction/',booking.agencyId]"
+          [queryParams]="{batchTxnName: booking.batchTxnName}">
             <mat-icon title="Thực hiện giao dịch "> gavel </mat-icon>
           </button>
-        </a>
           <button mat-mini-fab color="warn" (click)="cancelBooking(booking)">
             <mat-icon title="Thực hiện giao dịch "> undo </mat-icon>
           </button>
