--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
@@ -29,6 +29,12 @@ tr.example-element-row:not(.example-expanded-row):active {
   display: flex;
 }
 
+.card-info {
+  text-decoration: underline;
+  color: green;
+  font-weight: bold;
+}
+
 .example-element-diagram {
   min-width: 80px;
   border: 2px solid black;
