--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -24,7 +24,7 @@
        <a mat-tab-link class="tab-link" [routerLink]="['/accounting']">
         <fa-icon class="mr-05" icon="money-bill-alt" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblAccounting" | translate }}
-      </a> 
+      </a>
       <a mat-tab-link class="tab-link" [matMenuTriggerFor]="reportsMenu" #reportsMenuTrigger="matMenuTrigger">
         <fa-icon class="mr-05" icon="chart-bar" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblReport" | translate }}
@@ -36,7 +36,7 @@
       <a mat-tab-link class="tab-link" [matMenuTriggerFor]="selfServiceMenu" #selfServiceMenuTrigger="matMenuTrigger">
         <fa-icon class="mr-05" icon="users" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblSelfService" | translate }}
-      </a> 
+      </a>
     </span>
     <!-- Menu danh cho các user Admin -->
     <a mat-tab-link class="tab-link" [matMenuTriggerFor]="POSPartnerMenu" #institutionMenuTrigger="matMenuTrigger">
@@ -52,11 +52,11 @@
       <fa-icon class="mr-05" icon="university" size="lg"></fa-icon>
       Booking
     </a>
-    <a mat-tab-link class="tab-link" [matMenuTriggerFor]="Marketing" #institutionMenuTrigger="matMenuTrigger">
+    <a *midasHasPermission="'POS_UPDATE'" mat-tab-link class="tab-link" [matMenuTriggerFor]="Marketing" #institutionMenuTrigger="matMenuTrigger">
       <fa-icon class="mr-05" icon="university" size="lg"></fa-icon>
       Marketing
     </a>
-    <a mat-tab-link class="tab-link" routerLink="/banks">
+    <a *midasHasPermission="'ALL_FUNCTIONS'" mat-tab-link class="tab-link" routerLink="/banks">
       <fa-icon class="mr-05" icon="university" size="lg"></fa-icon>
       Banks
     </a>
